<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context="com.hokaze.exaltedroller.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:shadowColor="?android:attr/colorForeground"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="?attr/colorAccent"
        android:textStyle="bold|italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/d10label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/d10s"
                android:layout_alignBottom="@+id/d10s"
                android:layout_margin="5dp"
                android:text="@string/number_of_d10s"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?android:attr/textColorPrimary" />

            <EditText
                android:id="@+id/d10s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/colourHighlights"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/colourHighlights"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:enabled="true"
                android:gravity="center_horizontal"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textColor="?android:attr/textColorPrimary" />

            <CheckBox
                android:id="@+id/doubleTens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/d10s"
                android:checked="true"
                android:clickable="true"
                android:enabled="true"
                android:text="@string/_10s_count_as_doubles" />

            <CheckBox
                android:id="@+id/colourHighlights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/doubleTens"
                android:checked="true"
                android:text="@string/colour_highlighting" />

            <CheckBox
                android:id="@+id/botchesSubtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/doubleTens"
                android:layout_toLeftOf="@+id/tricksButton"
                android:layout_toStartOf="@+id/tricksButton"
                android:checked="false"
                android:clickable="true"
                android:enabled="true"
                android:text="@string/botches_subtract_successes" />

            <CheckBox
                android:id="@+id/enableEx3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/botchesSubtract"
                android:layout_toLeftOf="@+id/tricksButton"
                android:layout_toStartOf="@+id/tricksButton"
                android:checked="false"
                android:clickable="true"
                android:enabled="true"
                android:text="@string/enable_3rd_edition_dice_tricks" />

            <Button
                android:id="@+id/tricksButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/enableEx3"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/colourHighlights"
                android:enabled="true"
                android:text="@string/dice_tricks" />

            <Button
                android:id="@+id/rollButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/d10s"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/d10s"
                android:layout_below="@+id/tricksButton"
                android:layout_margin="2dp"
                android:enabled="true"
                android:text="@string/roll" />

            <TextView
                android:id="@+id/successView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_below="@+id/rollButton"
                android:layout_margin="5dp"
                android:enabled="true"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/successes"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/resultsView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignLeft="@+id/successView"
                android:layout_alignStart="@+id/successView"
                android:layout_below="@+id/successView"
                android:enabled="true"
                android:minLines="1"
                android:scrollbars="vertical"
                android:text="@string/results"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>